# AI-Assistant

./: .env.example  .gitignore  README.md  problems.md  pyproject.toml  qwen_report.md  stage-1-system-design.md  stage-2-interaction-interface.md  stage-3-llm-integration.md  stage-4-task-processing-logic.md  start-project.cmd
.github/workflows/: ci.yml
.qwen/: settings.json
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: config.py  logging.py
backend/app/models/: __init__.py  api.py
backend/app/services/: analysis_cache.py  openai_client.py  pdf_generator.py  prompt_builder.py  task_service.py
backend/app/storage/: __init__.py  base.py  factory.py  sqlite.py
backend/freelance_flow_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
example/: index.html  main.py
frontend/: app.js  index.html  styles.css
scripts/: populate_hodzha_projects.py
tests/: conftest.py  test_api_integration.py  test_task_service.py  test_task_store.py
